ajustes no mobile

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             </p>
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
+                    <img src="./dist/images/disneyplus.svg" alt="Disney+ - Star+ - Combo+">
                     <button class="button">Assine Agora</button>
-                    <span class="text">R$ 45,90/mês*</span>
+                    <span class="text">R$ 33,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+ - Star+ - Combo+">
+                    <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
                     <button class="button">Assine Agora</button>
                     <span class="text">R$ 55,90/mês*</span>
                 </li>
@@ -173,7 +173,10 @@
         </div>
     </section>
     <section class="image-text-section image-text-section--image-full-width">
-        <img src="./dist/images/fundo_rei_leao.png" alt="rei leão fundo">
+        <picture>
+            <source media="(max-width:768px)" srcset="./dist/images/fundo_rei_leao_celular.png">
+            <img src="./dist/images/fundo_rei_leao.png" alt="rei leão fundo">
+        </picture>
         <div class="image-text-section__text-container  image-text-section--image-full-width__text-container">
             <h2 class="title">
                 Baixe filmes e séries.
